--- a/styles/grafico.css
+++ b/styles/grafico.css
@@ -1,5 +1,6 @@
 .dadosDolar,
-.dadosIene {
+.dadosIene,
+.dadosArs {
     margin: 3em auto;
     padding: 2em;
     display: flex;
@@ -31,6 +32,10 @@
 
 .grafico__ilustracao-iene {
     background-image: url('../imagens/iene.png');
+}
+
+.grafico__ilustracao-ars {
+    background-image: url('../imagens/ars.png');
 }
 
 .grafico__titulo h2 {
