--- a/styles/grafico.css
+++ b/styles/grafico.css
@@ -35,7 +35,7 @@
 }
 
 .grafico__ilustracao-ars {
-    background-image: url('../imagens/ars.png');
+    background-image: url('../imagens/cifrao.png');
 }
 
 .grafico__titulo h2 {
